feat: monorepo init

--- a/package.json
+++ b/package.json
@@ -1,42 +1,17 @@
 {
-  "name": "manager",
-  "version": "0.0.0",
   "private": true,
-  "type": "module",
+  "workspaces": [
+    "packages/*"
+  ],
   "scripts": {
-    "dev": "vite",
-    "build": "run-p type-check \"build-only {@}\" --",
-    "preview": "vite preview",
-    "build-only": "vite build",
-    "type-check": "vue-tsc --build",
-    "lint": "eslint . --fix",
-    "format": "prettier --write src/"
+    "build": "tsc --build tsconfig.base.json",
+    "build:shared": "yarn workspace @dash/shared build",
+    "build:backend": "yarn workspace @dash/backend build",
+    "build:frontend": "yarn workspace @dash/frontend build",
+    "start:dev": "concurrently \"yarn workspace @dash/backend start:dev \" \"yarn workspace @dash/frontend dev\" \"yarn workspace @dash/shared dev \""
   },
-  "dependencies": {
-    "@tailwindcss/vite": "^4.1.3",
-    "pinia": "^3.0.1",
-    "tailwindcss": "^4.1.3",
-    "vue": "^3.5.13",
-    "vue-router": "^4.5.0"
-  },
+  "packageManager": "yarn@1.22.22+sha512.a6b2f7906b721bba3d67d4aff083df04dad64c399707841b7acf00f6b133b7ac24255f2652fa22ae3534329dc6180534e98d17432037ff6fd140556e2bb3137e",
   "devDependencies": {
-    "@antfu/eslint-config": "^4.12.0",
-    "@tsconfig/node22": "^22.0.1",
-    "@types/node": "^22.14.0",
-    "@vitejs/plugin-vue": "^5.2.3",
-    "@vue/eslint-config-prettier": "^10.2.0",
-    "@vue/eslint-config-typescript": "^14.5.0",
-    "@vue/tsconfig": "^0.7.0",
-    "eslint": "^9.22.0",
-    "eslint-plugin-format": "^1.0.1",
-    "eslint-plugin-vue": "~10.0.0",
-    "jiti": "^2.4.2",
-    "npm-run-all2": "^7.0.2",
-    "prettier": "3.5.3",
-    "typescript": "~5.8.0",
-    "vite": "^6.2.4",
-    "vite-plugin-vue-devtools": "^7.7.2",
-    "vue-tsc": "^2.2.8"
-  },
-  "packageManager": "yarn@4.5.2+sha224.c2e2e9ed3cdadd6ec250589b3393f71ae56d5ec297af11cec1eba3b4"
+    "concurrently": "^9.1.2"
+  }
 }
