--- a/packages/frontend/tsconfig.node.json
+++ b/packages/frontend/tsconfig.node.json
@@ -9,8 +9,10 @@
     "eslint.config.*"
   ],
   "compilerOptions": {
-    "noEmit": true,
+    "noEmit": false,
     "tsBuildInfoFile": "./node_modules/.tmp/tsconfig.node.tsbuildinfo",
+    "composite": true,
+    "emitDeclarationOnly": true,
 
     "module": "ESNext",
     "moduleResolution": "Bundler",
