feat: add new icons and update routes with icons in the frontend layout
- Added HelpIcon, LogoutIcon, ProjectIcon, ResourcesIcon, SettingIcon, and StaffIcon components.
- Updated the routes in constants.ts to include new icons for Dashboard, Projects, Staff, Clients, and Resources.
- Introduced common routes for Help and Settings with corresponding icons.
- Created type definitions for routes in index.ts.
- Implemented validation utility in useValidate.ts for form fields.
- Added Logo component for branding in shared components.
- Defined counter store using Pinia for state management.
- Updated Vite configuration and type definitions for better type safety.
- Created authentication types for login data validation.

--- a/package.json
+++ b/package.json
@@ -3,11 +3,16 @@
   "workspaces": [
     "packages/*"
   ],
+  "nohoist": true,
   "scripts": {
     "build": "tsc --build tsconfig.base.json",
     "build:shared": "yarn workspace @dash/shared build",
     "build:backend": "yarn workspace @dash/backend build",
     "build:frontend": "yarn workspace @dash/frontend build",
+    "start:frontend": "yarn workspace @dash/frontend dev",
+    "start:types": "yarn workspace @dash/shared dev",
+    "start:fe-types": "concurrently \"yarn workspace @dash/frontend dev\" \"yarn workspace @dash/shared dev \"",
+    "start:be-types": "concurrently \"yarn workspace @dash/backend start:dev\" \"yarn workspace @dash/shared dev \"",
     "start:dev": "concurrently \"yarn workspace @dash/backend start:dev \" \"yarn workspace @dash/frontend dev\" \"yarn workspace @dash/shared dev \""
   },
   "packageManager": "yarn@1.22.22+sha512.a6b2f7906b721bba3d67d4aff083df04dad64c399707841b7acf00f6b133b7ac24255f2652fa22ae3534329dc6180534e98d17432037ff6fd140556e2bb3137e",
