--- a/packages/frontend/tsconfig.node.json
+++ b/packages/frontend/tsconfig.node.json
@@ -15,7 +15,7 @@
     "emitDeclarationOnly": true,
 
     "module": "ESNext",
-    "moduleResolution": "Bundler",
+    "moduleResolution": "bundler",
     "types": ["node"]
   }
 }
