--- a/packages/backend/tsconfig.json
+++ b/packages/backend/tsconfig.json
@@ -17,12 +17,20 @@
     "forceConsistentCasingInFileNames": true,
     "noImplicitAny": false,
     "strictBindCallApply": false,
-    "noFallthroughCasesInSwitch": false
+    "noFallthroughCasesInSwitch": false,
+    "strictPropertyInitialization": false, // Good for NestJS DI
   },
   "references": [
     {
       "path": "../shared"
     }
   ],
-  "include": ["src/**/*"]
+  "include": [
+    "src/**/*",
+    "config/**/*",
+    "utils/**/*",
+    "strategy/**/*",
+    "decorators/**/*",
+    "guards/**/*"
+  ]
 }
