--- a/packages/backend/tsconfig.json
+++ b/packages/backend/tsconfig.json
@@ -31,6 +31,7 @@
     "utils/**/*",
     "strategy/**/*",
     "decorators/**/*",
-    "guards/**/*"
+    "guards/**/*",
+    "services/**/*"
   ]
 }
