--- a/packages/backend/tsconfig.json
+++ b/packages/backend/tsconfig.json
@@ -32,6 +32,7 @@
     "strategy/**/*",
     "decorators/**/*",
     "guards/**/*",
-    "services/**/*"
+    "services/**/*",
+    "types/**/*"
   ]
 }
