feat: implement staff management module with CRUD operations and validation; enhance authentication flow

--- a/packages/backend/tsconfig.json
+++ b/packages/backend/tsconfig.json
@@ -20,11 +20,11 @@
     "noFallthroughCasesInSwitch": false,
     "strictPropertyInitialization": false, // Good for NestJS DI
   },
-  "references": [
-    {
-      "path": "../shared"
-    }
-  ],
+  // "references": [
+  //   {
+  //     "path": "../shared"
+  //   }
+  // ],
   "include": [
     "src/**/*",
     "config/**/*",
