--- a/packages/frontend/tsconfig.json
+++ b/packages/frontend/tsconfig.json
@@ -11,9 +11,9 @@
     {
       "path": "./tsconfig.node.json"
     },
-    {
-      "path": "../shared"
-    },
+    // {
+    //   "path": "../shared"
+    // },
     {
       "path": "./tsconfig.app.json"
     }
