--- a/packages/shared/tsconfig.json
+++ b/packages/shared/tsconfig.json
@@ -1,15 +1,13 @@
 {
   "extends": "../../tsconfig.base.json",
   "compilerOptions": {
-    "target": "ES2020",
-    "module": "nodenext",
+    "target": "ES2023",
+    "module": "commonjs",
     "strict": true,
     "outDir": "dist",
-    "rootDir": "src",
+    "rootDir": "./src",
     "experimentalDecorators": true,
-    "moduleResolution": "nodenext"
+    // "composite": true
   },
-  "include": [
-    "src/**/*"
-  ]
+  "include": ["src/types/*", "../../packages/backend/types/*"]
 }
