--- a/packages/frontend/package.json
+++ b/packages/frontend/package.json
@@ -19,6 +19,7 @@
     "class-transformer": "^0.5.1",
     "element-plus": "^2.9.10",
     "pinia": "^3.0.1",
+    "pinia-plugin-persistedstate": "^4.3.0",
     "tailwindcss": "^4.1.3",
     "vee-validate": "^4.15.0",
     "vue": "^3.5.13",
