feat: add engines field to specify required Node.js version in package.json

--- a/package.json
+++ b/package.json
@@ -3,6 +3,9 @@
   "workspaces": [
     "packages/*"
   ],
+  "engines": {
+    "node": "22.13.0"
+  },
   "nohoist": true,
   "scripts": {
     "build": "tsc --build tsconfig.base.json",
