--- a/packages/backend/package.json
+++ b/packages/backend/package.json
@@ -62,5 +62,8 @@
     "tsx": "^4.19.4",
     "typescript": "^5.8.3",
     "typescript-eslint": "^8.20.0"
+  },
+  "engines": {
+    "node": "20.x"
   }
 }
