--- a/packages/frontend/package.json
+++ b/packages/frontend/package.json
@@ -18,6 +18,7 @@
     "@tailwindcss/vite": "^4.1.3",
     "class-transformer": "^0.5.1",
     "element-plus": "^2.9.10",
+    "lodash": "^4.17.21",
     "pinia": "^3.0.1",
     "pinia-plugin-persistedstate": "^4.3.0",
     "tailwindcss": "^4.1.3",
