--- a/packages/frontend/package.json
+++ b/packages/frontend/package.json
@@ -17,6 +17,7 @@
     "@dash/shared": "^1.0.0",
     "@tailwindcss/vite": "^4.1.3",
     "class-transformer": "^0.5.1",
+    "date-fns": "^4.1.0",
     "element-plus": "^2.9.10",
     "lodash": "^4.17.21",
     "pinia": "^3.0.1",
